[package]
name = "hu_solver_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "hu_solver_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"

[package.metadata.maturin]
# Ensures the Python package name == module name
name = "hu_solver_native"
