[package]
name = "hu_solver_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "hu_solver_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde_json = { version = "1.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
